--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -12,6 +12,11 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
+    <style>
+      html {
+        overflow-y: auto !important;
+      }
+      </style>
   </head>
   <body >
     <noscript>
